fix splash page spacing

--- a/public/assets/css/main.scss
+++ b/public/assets/css/main.scss
@@ -107,7 +107,7 @@ label:focus {
   // height: 50px;
   text-transform: uppercase;
   padding: 10px 30px;
-  margin: 25px auto 0 auto;
+  margin: 25px auto 25px auto;
   letter-spacing: 2px;
   font-weight: $heavy-weight;
   vertical-align: middle;
@@ -414,7 +414,7 @@ label:focus {
 
 .image--iphone {
   transform: rotate(0deg);
-  width: 100%;
+  width: 90%;
   opacity: 1;
   display: block;
   margin: 20px auto 0px auto;
@@ -514,7 +514,7 @@ label:focus {
 
 .hero {
   margin: 30px auto 0px auto;
-  width: 80%;
+  width: 90%;
   display: grid;
   grid-template-columns: 1fr;
   justify-items: center;
